<resources>
    <string name="app_name">AndroidSlowFuck</string>
    <string name="lifecycle_of_activity">The Lifecycle of Activity</string>
    <string name="singletop">SingleTop</string>
    <string name="singletask">singleTask</string>
    <string name="singleinstance">singleInstance</string>
    <string name="ipc">IPC Activity</string>
    <string name="messengeractivity">Messenger Activity</string>
    <string name="book_manager_activity">Book Manager Activity</string>
    <string name="webview_activity">WebView Activity</string>
    <string name="md5_activity">MD5_Activity</string>
    <string name="title_activity_weather">WeatherActivity</string>
</resources>
