<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_life_cycle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.beijing.giraffeman.androidslowfuck.lifecycle.ui.LifeCycleActivity">

    <Button
        android:id="@+id/btn_life_singleTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singletop"
        android:layout_alignParentTop="true"/>
    <Button
        android:id="@+id/btn_life_singleTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singletask"
        android:layout_below="@id/btn_life_singleTop"/>
    <Button
        android:id="@+id/btn_life_singleInstance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singleinstance"
        android:layout_below="@id/btn_life_singleTask"/>

</RelativeLayout>
